--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Devon's secret site — Unblocked Games</title>
+  <title>Devin's secret site — Unblocked Games</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
@@ -337,7 +337,7 @@ const GAMES = [
 <nav>
   <a class="nav-logo" href="#" onclick="filterTag('All');return false;">
     <div class="nav-logo-icon">🎮</div>
-    <span>MacVG</span>
+    <span>Devin secret site.</span>
   </a>
   <div class="nav-links">
     <a class="active" onclick="filterTag('All');setNavActive(this)">Home</a>
