--- a/index.html
+++ b/index.html
@@ -274,69 +274,37 @@
 <script>
 const GAMES = [
   // ── FEATURED ───────────────────────────────────
-  { name: "1v1.lol",                 url: "games/1v1lol/index.html",               icon: "🎯", tag: "Featured" },
-  { name: "Slope",                   url: "games/slope/index.html",                icon: "🎿", tag: "Featured" },
-  { name: "Run 3",                   url: "games/run3/index.html",                 icon: "🏃", tag: "Featured" },
-  { name: "Geometry Dash",           url: "games/geodash/index.html",              icon: "💠", tag: "Featured" },
-  { name: "Cookie Clicker",          url: "games/cookieclicker/index.html",        icon: "🍪", tag: "Featured" },
+  { name: "Geometry Dash", url: "games/geodash/index.html"
+  { name: "CloverPit", url: "games/fnaf/index.html"
+  { name: "Solar Smash", url: "games/fnaf/index.html"
 
   // ── ACTION ─────────────────────────────────────
-  { name: "Alien Hominid",           url: "games/alienhominid/index.html",         icon: "👾", tag: "Action" },
-  { name: "Awesome Tanks 2",         url: "games/awesome-tanks-2/index.html",      icon: "🪖", tag: "Action" },
-  { name: "Bacon May Die",           url: "games/bacon-may-die/index.html",        icon: "🥓", tag: "Action" },
-  { name: "Blumgi Slime",            url: "games/blumgi-slime/index.html",         icon: "🟢", tag: "Action" },
-  { name: "Bob the Robber 2",        url: "games/bobtherobber2/index.html",        icon: "🦹", tag: "Action" },
-  { name: "Bomb It 7",               url: "games/bomb-it-7/index.html",            icon: "💣", tag: "Action" },
-  { name: "Boxel Rebound",           url: "games/boxel-rebound/index.html",        icon: "📦", tag: "Action" },
-  { name: "Death Run 3D",            url: "games/death-run-3d/index.html",         icon: "💀", tag: "Action" },
-  { name: "Fireboy and Watergirl",   url: "games/fireboywatergirl/index.html",     icon: "🔥", tag: "Action" },
-  { name: "Five Nights at Freddy's", url: "games/fnaf/index.html",                icon: "🐻", tag: "Action" },
-  { name: "Funny Shooter 2",         url: "games/funnyshooter2/index.html",        icon: "🔫", tag: "Action" },
-  { name: "Getaway Shootout",        url: "games/getaway-shootout/index.html",     icon: "🚨", tag: "Action" },
-  { name: "Getting Over It",         url: "games/getting-over-it/index.html",      icon: "🪣", tag: "Action" },
-  { name: "G-Switch 3",              url: "games/gswitch-3/index.html",            icon: "🔄", tag: "Action" },
-  { name: "Iron Snout",              url: "games/iron-snout/index.html",           icon: "🐷", tag: "Action" },
-  { name: "Shell Shockers",          url: "games/shellshockers/index.html",        icon: "🥚", tag: "Action" },
-
-  // ── STRATEGY ───────────────────────────────────
-  { name: "2048",                    url: "games/2048/index.html",                 icon: "🔢", tag: "Strategy" },
-  { name: "Bloons TD 4",             url: "games/bloonstd4/index.html",            icon: "🎈", tag: "Strategy" },
-  { name: "Chess",                   url: "games/chess/index.html",                icon: "♟️", tag: "Strategy" },
-  { name: "Clicker Heroes",          url: "games/clicker-heroes/index.html",       icon: "⚔️", tag: "Strategy" },
-  { name: "Cut the Rope",            url: "games/ctr/index.html",                  icon: "🪢", tag: "Strategy" },
-  { name: "Factory Balls Forever",   url: "games/factoryballs/index.html",         icon: "🔵", tag: "Strategy" },
-  { name: "Google Feud",             url: "games/google-feud/index.html",          icon: "🔍", tag: "Strategy" },
-  { name: "Impossible Quiz",         url: "games/impossiblequiz/index.html",       icon: "❓", tag: "Strategy" },
-  { name: "Little Alchemy 2",        url: "games/little-alchemy-2/index.html",     icon: "⚗️", tag: "Strategy" },
-
+  { name: "Fnaf", url: "games/fnaf/index.html"
+  { name: "Fnae", url: "games/fnaf/index.html"
+  { name: "Google Baseball", url: "games/fnaf/index.html"
+  { name: "Retro Bowl", url: "games/fnaf/index.html"
+  { name: "Bad Time Simulator", url: "games/fnaf/index.html"
+  { name: "Bow Masters", url: "games/fnaf/index.html"
+  { name: "Dumb Ways To Die", url: "games/fnaf/index.html"
+  
   // ── CASUAL ─────────────────────────────────────
-  { name: "Aquapark Slides",         url: "games/aquapark-slides/index.html",      icon: "🌊", tag: "Casual" },
-  { name: "Bottle Flip",             url: "games/bottle-flip/index.html",          icon: "🍾", tag: "Casual" },
-  { name: "Crossy Road",             url: "games/crossyroad/index.html",           icon: "🐔", tag: "Casual" },
-  { name: "Doodle Jump",             url: "games/doodle-jump/index.html",          icon: "🦘", tag: "Casual" },
-  { name: "Duck Life",               url: "games/ducklife/index.html",             icon: "🦆", tag: "Casual" },
-  { name: "Flappy Bird",             url: "games/flappy-bird/index.html",          icon: "🐦", tag: "Casual" },
-  { name: "Fruit Ninja",             url: "games/fruit-ninja/index.html",          icon: "🍉", tag: "Casual" },
-  { name: "Hacker Typer",            url: "games/hackertype/index.html",           icon: "💻", tag: "Casual" },
-  { name: "Idle Breakout",           url: "games/idle-breakout/index.html",        icon: "🧱", tag: "Casual" },
-  { name: "Snake",                   url: "games/snake/index.html",                icon: "🐍", tag: "Casual" },
-  { name: "Tetris",                  url: "games/tetris/index.html",               icon: "🟦", tag: "Casual" },
+  { name: "Bottle Flip 3D",             url: "games/bottle-flip/index.html"
+  { name: "Crossy Road",             url: "games/crossyroad/index.html"
+  { name: "Snake",                   url: "games/snake/index.html"
+  { name: "Core ball",                   url: "games/snake/index.html"
+  { name: "Gobble",                   url: "games/snake/index.html"
+  { name: "Stickman Hook",                   url: "games/snake/index.html"
 
   // ── DRIVING ────────────────────────────────────
-  { name: "Car Rush",                url: "games/car-rush/index.html",             icon: "🚙", tag: "Driving" },
-  { name: "Crazy Cars",              url: "games/crazy-cars/index.html",           icon: "🚕", tag: "Driving" },
-  { name: "Drift Boss",              url: "games/drift-boss/index.html",           icon: "🚗", tag: "Driving" },
-  { name: "Drive Mad",               url: "games/drive-mad/index.html",            icon: "🤪", tag: "Driving" },
-  { name: "Madalin Stunt Cars 2",    url: "games/madalin-stunt-cars-2/index.html", icon: "🏎️", tag: "Driving" },
-  { name: "Moto X3M",                url: "games/motox3m/index.html",              icon: "🏍️", tag: "Driving" },
-  { name: "Road Fury",               url: "games/road-fury/index.html",            icon: "💥", tag: "Driving" },
+  { name: "Drive Mad",               url: "games/drive-mad/index.html"
+  { name: "Wheelie Bike",               url: "games/drive-mad/index.html"
 ];
 </script>
 
 <!-- NAV -->
 <nav>
   <a class="nav-logo" href="#" onclick="filterTag('All');return false;">
-    <div class="nav-logo-icon">🎮</div>
+    <div class="nav-logo-icon"></div>
     <span>Devin secret site.</span>
   </a>
   <div class="nav-links">
