--- a/index.html
+++ b/index.html
@@ -274,30 +274,28 @@
 <script>
 const GAMES = [
   // ── FEATURED ───────────────────────────────────
-  { name: "Geometry Dash", url: "games/geodash/index.html"
-  { name: "CloverPit", url: "games/fnaf/index.html"
-  { name: "Solar Smash", url: "games/fnaf/index.html"
+  { name: "Geometry Dash", url: "games/clgdlite.html"
+  { name: "CloverPit", url: "games/Clover Pit.html"
+  { name: "Solar Smash", url: "games/clsolarsmash.html"
 
   // ── ACTION ─────────────────────────────────────
-  { name: "Fnaf", url: "games/fnaf/index.html"
-  { name: "Fnae", url: "games/fnaf/index.html"
-  { name: "Google Baseball", url: "games/fnaf/index.html"
-  { name: "Retro Bowl", url: "games/fnaf/index.html"
-  { name: "Bad Time Simulator", url: "games/fnaf/index.html"
-  { name: "Bow Masters", url: "games/fnaf/index.html"
-  { name: "Dumb Ways To Die", url: "games/fnaf/index.html"
+  { name: "Fnaf", url: "games/clFNAF.html"
+  { name: "Fnae", url: "games/clfivenightsatepsteins.html"
+  { name: "Google Baseball", url: "games/Google Baseball.html"
+  { name: "Retro Bowl", url: "games/clretrobowl.html"
+  { name: "Bad Time Simulator", url: "games/Bad Time Simulator.html"
+  { name: "Bow Masters", url: "games/Bowmasters.html"
+  { name: "Dumb Ways To Die", url: "games/cldumbwaystodie.html"
   
   // ── CASUAL ─────────────────────────────────────
-  { name: "Bottle Flip 3D",             url: "games/bottle-flip/index.html"
   { name: "Crossy Road",             url: "games/crossyroad/index.html"
-  { name: "Snake",                   url: "games/snake/index.html"
-  { name: "Core ball",                   url: "games/snake/index.html"
-  { name: "Gobble",                   url: "games/snake/index.html"
-  { name: "Stickman Hook",                   url: "games/snake/index.html"
+  { name: "Coreball",                   url: "games/Coreball.html"
+  { name: "Gobble",                   url: "games/Gobble.html"
+  { name: "Stickman Hook",                   url: "games/Stickman Hook.html"
 
   // ── DRIVING ────────────────────────────────────
-  { name: "Drive Mad",               url: "games/drive-mad/index.html"
-  { name: "Wheelie Bike",               url: "games/drive-mad/index.html"
+  { name: "Drive Mad",               url: "games/cldrivemady.html"
+  { name: "Wheelie Bike",               url: "games/clwheeliebike.html"
 ];
 </script>
 
