--- a/index.html
+++ b/index.html
@@ -274,28 +274,28 @@
 <script>
 const GAMES = [
   // ── FEATURED ───────────────────────────────────
-  { name: "Geometry Dash", url: "games/clgdlite.html"
-  { name: "CloverPit", url: "games/Clover Pit.html"
-  { name: "Solar Smash", url: "games/clsolarsmash.html"
+  { name: "Geometry Dash", url: "games/clgdlite.html",               icon: "🎯", tag: "Featured" },
+  { name: "CloverPit", url: "games/Clover Pit.html",               icon: "🎯", tag: "Featured" },
+  { name: "Solar Smash", url: "games/clsolarsmash.html",               icon: "🎯", tag: "Featured" },
 
   // ── ACTION ─────────────────────────────────────
-  { name: "Fnaf", url: "games/clFNAF.html"
-  { name: "Fnae", url: "games/clfivenightsatepsteins.html"
-  { name: "Google Baseball", url: "games/Google Baseball.html"
-  { name: "Retro Bowl", url: "games/clretrobowl.html"
-  { name: "Bad Time Simulator", url: "games/Bad Time Simulator.html"
-  { name: "Bow Masters", url: "games/Bowmasters.html"
-  { name: "Dumb Ways To Die", url: "games/cldumbwaystodie.html"
+  { name: "Fnaf", url: "games/clFNAF.html",               icon: "🎯", tag: "Action" },
+  { name: "Fnae", url: "games/clfivenightsatepsteins.html",               icon: "🎯", tag: "Action" },
+  { name: "Google Baseball", url: "games/Google Baseball.html",               icon: "🎯", tag: "Action" },
+  { name: "Retro Bowl", url: "games/clretrobowl.html",               icon: "🎯", tag: "Action" },
+  { name: "Bad Time Simulator", url: "games/Bad Time Simulator.html",               icon: "🎯", tag: "Action" },
+  { name: "Bow Masters", url: "games/Bowmasters.html",               icon: "🎯", tag: "Action" },
+  { name: "Dumb Ways To Die", url: "games/cldumbwaystodie.html",               icon: "🎯", tag: "Action" },
   
   // ── CASUAL ─────────────────────────────────────
-  { name: "Crossy Road",             url: "games/crossyroad/index.html"
-  { name: "Coreball",                   url: "games/Coreball.html"
-  { name: "Gobble",                   url: "games/Gobble.html"
-  { name: "Stickman Hook",                   url: "games/Stickman Hook.html"
+  { name: "Crossy Road",             url: "games/crossyroad/index.html",               icon: "🎯", tag: "Casual" },
+  { name: "Coreball",                   url: "games/Coreball.html",               icon: "🎯", tag: "Casual" },
+  { name: "Gobble",                   url: "games/Gobble.html",               icon: "🎯", tag: "Casual" },
+  { name: "Stickman Hook",                   url: "games/Stickman Hook.html",               icon: "🎯", tag: "Casual" },
 
   // ── DRIVING ────────────────────────────────────
-  { name: "Drive Mad",               url: "games/cldrivemady.html"
-  { name: "Wheelie Bike",               url: "games/clwheeliebike.html"
+  { name: "Drive Mad",               url: "games/cldrivemady.html",               icon: "🎯", tag: "Driving" },
+  { name: "Wheelie Bike",               url: "games/clwheeliebike.html",               icon: "🎯", tag: "Driving" },
 ];
 </script>
 
