--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ const GAMES = [
   { name: "Dumb Ways To Die", url: "games/cldumbwaystodie.html",               icon: "🎯", tag: "Action" },
   
   // ── CASUAL ─────────────────────────────────────
-  { name: "Crossy Road",             url: "games/crossyroad/index.html",               icon: "🎯", tag: "Casual" },
+  { name: "Crossy Road",             url: "games/Crossy Road.html",               icon: "🎯", tag: "Casual" },
   { name: "Coreball",                   url: "games/Coreball.html",               icon: "🎯", tag: "Casual" },
   { name: "Gobble",                   url: "games/Gobble.html",               icon: "🎯", tag: "Casual" },
   { name: "Stickman Hook",                   url: "games/Stickman Hook.html",               icon: "🎯", tag: "Casual" },
@@ -303,7 +303,7 @@ const GAMES = [
 <nav>
   <a class="nav-logo" href="#" onclick="filterTag('All');return false;">
     <div class="nav-logo-icon"></div>
-    <span>Devin secret site.</span>
+    <span>Devin secret site. Coded by finnegan</span>
   </a>
   <div class="nav-links">
     <a class="active" onclick="filterTag('All');setNavActive(this)">Home</a>
