--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@ const GAMES = [
   { name: "Coreball",                   url: "games/Coreball.html",               icon: "🎯", tag: "Casual" },
   { name: "Gobble",                   url: "games/Gobble.html",               icon: "🎯", tag: "Casual" },
   { name: "Stickman Hook",                   url: "games/Stickman Hook.html",               icon: "🎯", tag: "Casual" },
+  { name: "Bart Blast",                   url: "games/Bart Blast.html",               icon: "🎯", tag: "Casual" },
+  { name: "Drift Boss",                   url: "games/DriftBoss.html",               icon: "🎯", tag: "Casual" },
+  { name: "Drift Boss",                   url: "games/Stickman Golf.html",               icon: "🎯", tag: "Casual" },
 
   // ── DRIVING ────────────────────────────────────
   { name: "Drive Mad",               url: "games/cldrivemady.html",               icon: "🎯", tag: "Driving" },
