--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ const GAMES = [
   { name: "Stickman Hook",                   url: "games/Stickman Hook.html",               icon: "🎯", tag: "Casual" },
   { name: "Bart Blast",                   url: "games/Bart Blast.html",               icon: "🎯", tag: "Casual" },
   { name: "Drift Boss",                   url: "games/DriftBoss.html",               icon: "🎯", tag: "Casual" },
-  { name: "Drift Boss",                   url: "games/Stickman Golf.html",               icon: "🎯", tag: "Casual" },
+  { name: "Stickamn Golf",                   url: "games/Stickman Golf.html",               icon: "🎯", tag: "Casual" },
 
   // ── DRIVING ────────────────────────────────────
   { name: "Drive Mad",               url: "games/cldrivemady.html",               icon: "🎯", tag: "Driving" },
