--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@ const GAMES = [
 
 <!-- FOOTER -->
 <footer>
-  © 2025 <strong>MacVG</strong> — All rights reserved &nbsp;·&nbsp;
+  © 2026 <strong>Devon Private Site</strong> — All rights reserved &nbsp;·&nbsp;
   Have fun playing these unblocked games! 🎮 &nbsp;·&nbsp;
-  <a href="https://github.com/Mac-Web/macvg" target="_blank">GitHub</a>
+  <a href="https://github.com/devinthegoat99/secretsite" target="_blank">GitHub</a>
 </footer>
 
 <script>
